# ai-uc-rpa-guidance-dev

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  reference.code-workspace
compose/floci/start.d/: 01-cdp-uploader.sh  10-setup-resources.sh
dependencies/: cdp-uploader.yaml
scripts/: clone.py  pull.py  update.py
service-compose/: ai-uc-rpa-guidance-evals-fe.yaml  ai-uc-rpa-guidance-evals-runtime.yaml  ai-uc-rpa-guidance-fe.yaml  ai-uc-rpa-guidance.yaml
